# origin-spyglass

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  CLAUDE.md  Makefile  README.md  _typos.toml  docker-compose.yml  prek.toml
.claude/: settings.json
.claude/hooks/: enforce-skills.sh  test-backend.sh  test-frontend.sh
.claude/skills/explore/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/translate/: SKILL.md
.github/workflows/: ruff-check.yml  type-check.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/v1/: chat.py  health.py  models.py
backend/src/app/schemas/: __init__.py  openai.py
backend/src/origin_spyglass/: main.py  security_headers.py
backend/src/origin_spyglass/api/v1/: __init__.py  chat.py  docs.py  health.py  ideas.py  models.py
backend/src/origin_spyglass/db/: __init__.py  graph_store.py
backend/src/origin_spyglass/doc_relationship_persister/: __init__.py  service.py  types.py
backend/src/origin_spyglass/doc_retriever/: __init__.py  express.py  interpret.py  pipeline.py  query_retrieve.py  types.py  validation.py
backend/src/origin_spyglass/idea_relation_persister/: __init__.py  express.py  extractor.py  persist.py  pipeline.py  structure.py  types.py  validation.py
backend/src/origin_spyglass/idea_relation_retriever/: __init__.py  express.py  interpret.py  pipeline.py  query_exploration.py  types.py  validation.py
backend/src/origin_spyglass/infra/: __init__.py  graph_store.py  vector_store.py
backend/src/origin_spyglass/infra/llm/: base.py  clients.py  exceptions.py  openai_api.py  utils.py
backend/src/origin_spyglass/local_doc_loader/: __init__.py  cleaner.py  converter.py  types.py
backend/src/origin_spyglass/pipelines/: __init__.py
backend/src/origin_spyglass/relation_persister/: context_injector.py  pipeline.py  service.py  type.py
backend/src/origin_spyglass/schemas/: __init__.py  ask.py  doc_relation.py  openai.py  semantic_knowledge.py
backend/src/spyglass_utils/: logging.py  output_filter.py  rate_limiter.py  settings.py
backend/src/utils/: logging.py  output_filter.py  rate_limiter.py  settings.py
backend/tests/: test_security_headers.py
backend/tests/api/v1/: test_chat.py  test_docs.py  test_health.py  test_ideas.py  test_models.py
backend/tests/doc_relationship_persister/: test_service.py
backend/tests/doc_retriever/: __init__.py  _helpers.py  test_express.py  test_interpret.py  test_pipeline.py  test_query_retrieve.py  test_validation.py
backend/tests/idea_relation_persister/: _helpers.py  test_express.py  test_extractor.py  test_persist.py  test_pipeline.py  test_structure.py  test_validation.py
backend/tests/idea_relation_retriever/: _helpers.py  test_express.py  test_interpret.py  test_pipeline.py  test_query_exploration.py  test_validation.py
backend/tests/infra/: test_graph_store.py  test_vector_store.py
backend/tests/infra/llm/: test_clients.py
backend/tests/local_doc_loader/: test_local_doc_loader.py
backend/tests/utils/: test_output_filter.py  test_rate_limiter.py
config/: .env.example  triplet_schema.yml
docs/: architecture.md  openai-api-structure.md  repository-design.md  user-journey.md
docs/nodes/: doc-relationship-persister.md  doc-retriever.md  idea-relation-retriever.md  idea-relationship-persister.md  local-doc-loader.md  node-structure-base.md
frontend/: .eslintrc.json  package.json  pnpm-lock.yaml
scripts/: setup_uv.sh  setup_with_mac.sh  setup_with_wsl.sh
