[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "origin-spyglass-backend"
version = "0.1.0"
description = "Backend service for ORIGIN-SPYGLASS research agent workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "llama-index-core>=0.12.0",
    "llama-index-graph-stores-neo4j>=0.7.0",
    "markitdown>=0.1.1",
    "openai>=1.51.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.2",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "mypy==1.16.0",
    "prek==0.3.8",
    "pytest==8.3.3",
    "pytest-asyncio>=0.25",
    "pytest-cov==5.0.0",
    "ruff==0.11.4",
    "types-PyYAML==6.0.12.20240917",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
pretty = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
